--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -63,15 +63,38 @@ background-image: url(https://imgs.search.brave.com/DNuNY_PQz-74tMlzoWt2KSFq7Xr2
     background-color: #EEEAEB;
     padding: 1vw;
     margin-top: 0.5vw;
+    border: none;
 }
+
 #searchbar input{
-    width: 80%;
+    width: 100%;
     height: 2vw;
      padding-left: 1.5vw;
      border-radius: 15px;
      border: none;
 }
 
+.searchSection {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    background-color: #72727231;
+    display: none;
+  }
+
+  .searchSection .center {
+    height: 70vh;
+    width: 60vw;
+    background-color: #fff;
+    border-radius: 0.5rem;
+  }
+  
 .chatblock{
     width: 100%;
     height: 5vw;
